# AA-Projeto2

./: .gitignore  README.md  Slides.pptx  Tasks.ipynb  pyproject.toml  script.ipynb
.github/workflows/: convert-slides-template.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
tips/: tipsVisualization.ipynb
