[project]
name = "AA_Project_2"
version = "0.1.0"
description = "Second project for Machine Learning class"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "matplotlib>=3.10.6",
    "missingno>=0.5.2",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pip>=25.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
